--- a/aircv/HTML/index.html
+++ b/aircv/HTML/index.html
@@ -81,7 +81,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/02.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -90,9 +90,9 @@
                             <p class="promo-block-text">Undergraduate &amp; Front-end Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://www.facebook.com/minura.abeygunawardene/" class="social-icons" target="blank_"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="https://www.instagram.com/minura.abeygunawardene/" class="social-icons"><i class="icon-social-instagram"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/minura.abeygunawardene/" target=_blank class="social-icons"><i class="icon-social-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/minura.abeygunawardene/" target=_blank class="social-icons"><i class="icon-social-instagram"></i></a></li>
+                            <li><a href="http://linkedin.com/in/minura-abeygunawardene" target=_blank class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I'm Alex Teseira, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p>I am Minura Abeygunawardene, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
 
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>JavaSript <span class="color-heading pull-right">52%</span></h5>
+                            <h5>JavaSript <span class="color-heading pull-right">58%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
                             </div>
@@ -435,7 +435,7 @@
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
-                                <h2 class="margin-b-0">Contacts</h2>
+                                <h2 class="margin-b-0">Contact</h2>
                                 <p>Hire me.</p>
                             </div>
                         </div>
@@ -451,7 +451,7 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:minuradaksith@gmail.com" target="blank_">minuradaksith@gmail.com</a>
+                                    <a href="mailto:minuradaksith@gmail.com" target=_blank>minuradaksith@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
