Completed About section
Finished off the about section
added "my skills" and also edited some parts of education.

--- a/Resume/HTML/index.html
+++ b/Resume/HTML/index.html
@@ -67,7 +67,7 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Home</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">About</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Experience</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#education">Education</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Works</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
                             </ul>
@@ -87,7 +87,7 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Minura <br/> Abeygunawardene</h1>
-                            <p class="promo-block-text">Undergraduate &amp; Front-end Developer</p>
+                            <p class="promo-block-text">Undergraduate in Univeristy of Sri Jayewardenepura</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/minura.abeygunawardene/" target=_blank class="social-icons"><i class="icon-social-facebook"></i></a></li>
@@ -114,33 +114,34 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I am Minura Abeygunawardene, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>I am Minura Abeygunawardene, an enthusiastic young undergraduate from the Faculty of Applied Sciences of Univeristy of Sri Jayewardenepuracurrently. I am currently a final year student following the courses Mathematics, Computer Science and Statistics.</p>
+                            <p>I have worked in collabarative environments and projects of different scales and gained good public speaking skills and leadership skills. I am a good team player who can contribute with hard work, attention to detail, proactive palnning and the implementation.</p>
                         </div>
 
+                        <h2>My Skills</h2>
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>PHP <span class="color-heading pull-right">87%</span></h5>
+                            <h5>Leadership <span class="color-heading pull-right">78%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="78"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>HTML5 <span class="color-heading pull-right">96%</span></h5>
+                            <h5>Teamwork <span class="color-heading pull-right">85%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>JavaSript <span class="color-heading pull-right">58%</span></h5>
+                            <h5>Critical Thinking <span class="color-heading pull-right">65%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="65"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Photoshop <span class="color-heading pull-right">77%</span></h5>
+                            <h5>Problem Solving <span class="color-heading pull-right">75%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
@@ -152,13 +153,13 @@
         <!-- End About -->
 
         <!-- Experience -->
-        <div id="experience">
+        <div id="education">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container content-lg">
                     <div class="row">
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
-                                <h2 class="margin-b-0">Experience</h2>
+                                <h2 class="margin-b-0">Education</h2>
                                 <p>Batman would be jealous.</p>
                             </div>
                         </div>
@@ -167,11 +168,11 @@
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service" data-height="height">
                                         <div class="service-element">
-                                            <i class="service-icon icon-chemistry"></i>
+                                            <i class="service-icon icon-graduation"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>HTML5/CSS3</h3>
-                                            <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                            <h3>University of Sri Jayewardenepura</h3>
+                                            <p class="margin-b-5">Bachelor of Science (Physical Science).</p>
                                         </div>
                                         <a href="#" class="content-wrapper-link"></a>    
                                     </div>
@@ -179,10 +180,10 @@
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                         <div class="service-element">
-                                            <i class="service-icon color-white icon-screen-tablet"></i>
+                                            <i class="service-icon color-white icon-organization"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3 class="color-white">Photoshop</h3>
+                                            <h3 class="color-white">Ananda College</h3>
                                             <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
                                         </div>
                                         <a href="#" class="content-wrapper-link"></a>    
