Finished the eduction part

--- a/Resume/HTML/index.html
+++ b/Resume/HTML/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Aircv" Frontend Freebie</title>
+        <title>Minura Abeygunawardene</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -114,8 +114,8 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I am Minura Abeygunawardene, an enthusiastic young undergraduate from the Faculty of Applied Sciences of Univeristy of Sri Jayewardenepuracurrently. I am currently a final year student following the courses Mathematics, Computer Science and Statistics.</p>
-                            <p>I have worked in collabarative environments and projects of different scales and gained good public speaking skills and leadership skills. I am a good team player who can contribute with hard work, attention to detail, proactive palnning and the implementation.</p>
+                            <p>I am Minura Abeygunawardene, an enthusiastic undergraduate from the Faculty of Applied Sciences of Univeristy of Sri Jayewardenepura. I am currently a final year student following the courses Mathematics, Computer Science and Statistics.</p>
+                            <p>I have worked in collabarative environments and projects of different scales and gained good public speaking skills and leadership skills. I am a good team player who can contribute with hard work, attention to detail, proactive planning and the implementation.</p>
                         </div>
 
                         <h2>My Skills</h2>
@@ -160,7 +160,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Education</h2>
-                                <p>Batman would be jealous.</p>
+                                <p>of Vidura College, Hokandara and of Ananda College, Colombo 10.<p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
@@ -172,9 +172,8 @@
                                         </div>
                                         <div class="service-info">
                                             <h3>University of Sri Jayewardenepura</h3>
-                                            <p class="margin-b-5">Bachelor of Science (Physical Science).</p>
+                                            <p class="margin-b-5">Bachelor of Science in Physical Science<br> Mathematics, Computer Science and Statistics</p>
                                         </div>
-                                        <a href="#" class="content-wrapper-link"></a>    
                                     </div>
                                 </div>
                                 <div class="col-md-4 md-margin-b-4">
@@ -183,10 +182,9 @@
                                             <i class="service-icon color-white icon-organization"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3 class="color-white">Ananda College</h3>
-                                            <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                        </div>
-                                        <a href="#" class="content-wrapper-link"></a>    
+                                            <h3 class="color-white">Chatered Institute of Management Accountants</h3>
+                                            <p class="color-white margin-b-5">Certificate In Business Accounting <br>Cert BA</p>
+                                        </div>   
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -195,10 +193,9 @@
                                             <i class="service-icon icon-badge"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>Front-end</h3>
-                                            <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                        </div>
-                                        <a href="#" class="content-wrapper-link"></a>    
+                                            <h3>GCE Advanced Level Exam</h3>
+                                            <p class="margin-b-5">Mathematics   A<br>Chemistry  B<br>Physics    C<br>English    A</p>
+                                        </div>   
                                     </div>
                                 </div>
                             </div>
@@ -444,11 +441,11 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Location</h5>
-                                    <a href="#">Brookyln, New York</a>
+                                    <a href="#about">Purana road, Maharagama</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
-                                    <a href="+94777227992">+77 234 548 00 00</a>
+                                    <a href="+94777227992">+94 777 22 7992</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
@@ -456,7 +453,7 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                    <a href="https://www.instagram.com/minura.abeygunawardene/" target="blank_">VSAVAV.com</a>
+                                    <a href="https://www.instagram.com/minura.abeygunawardene/" target="blank_">minuraabeygunawardene.com</a>
                                 </div>
                             </div>
                         </div>
@@ -476,7 +473,7 @@
                         <img class="footer-logo" src="img/logo-dark.png" alt="Aircv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/aircv/">Aircv</a>Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
