--- a/Resume/HTML/index.html
+++ b/Resume/HTML/index.html
@@ -90,8 +90,8 @@
                             <p class="promo-block-text">Undergraduate in Univeristy of Sri Jayewardenepura</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://www.facebook.com/" target=_blank class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="https://www.instagram.com/" target=_blank class="social-icons"><i class="icon-social-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/minura.abeygunawardene" target=_blank class="social-icons"><i class="icon-social-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/minura.abeygunawardene/" target=_blank class="social-icons"><i class="icon-social-instagram"></i></a></li>
                             <li><a href="http://linkedin.com/in/minura-abeygunawardene" target=_blank class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -114,8 +114,8 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I am Minura Abeygunawardene, an enthusiastic undergraduate from the Faculty of Applied Sciences of Univeristy of Sri Jayewardenepura. I am currently a final year student following the courses Mathematics, Computer Science and Statistics.</p>
-                            <p>I have worked in collabarative environments and projects of different scales and gained good public speaking skills and leadership skills. I am a good team player who can contribute with hard work, attention to detail, proactive planning and the implementation.</p>
+                            <p>I am Minura Abeygunawardene, an enthusiastic undergraduate from the Faculty of Applied Sciences of University of Sri Jayewardenepura. I am currently a final year student following the courses Mathematics, Computer Science and Statistics. I was a student of Vidura College, Hokandara and of Ananda College, Colombo 10</p>
+                            <p>I have worked in collaborative environments and projects of different scales and gained good public speaking skills and leadership skills. I am a good team player who can contribute with hard work, attention to detail, proactive planning and the implementation.</p>
                         </div>
 
                         <h2>My Skills</h2>
@@ -160,7 +160,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Education</h2>
-                                <p>I am a student of Vidura College, Hokandara and of Ananda College, Colombo 10. <br> Investment in knowledge pays the best interest.<p>
+                                <p>Investment in knowledge pays the best interest.<p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
@@ -215,7 +215,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Extra Curricular</h2>
-                            <p>Gavel Club of University of Sri Jayewardenepura<br>USJ</p>
+                            <p> I engaged in various extra-curricular activites while in university to improve my leadership, teamwork and public speaking capabilities.</p>
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
@@ -238,14 +238,14 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony.</p>
+                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony of the incoming board of officials.</p>
                                                         <p>Organized Speech Master 2019 – the biggest university level best speaker contest.</p>
+                                                        <p>Organized Tharanaya CSR program to distibute school books to a rural school.</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Tenure :</strong> 2019/2020</p>
-                                                        <p class="margin-b-5"><strong>Other Events :</strong> Eleganza <br> Tharanaya</p>
+                                                        <p class="margin-b-5"><strong>Time :</strong> 2019/2020</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -270,14 +270,14 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony.</p>
+                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony of the incoming board of officials.</p>
                                                         <p>Organized Speech Master 2019 – the biggest university level best speaker contest.</p>
+                                                        <p>Organized Tharanaya a CSR program to distibute school books to a rural school.</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Tenure :</strong> 2019/2020</p>
-                                                        <p class="margin-b-5"><strong>Other Events :</strong> Eleganza <br> Tharanaya</p>
+                                                        <p class="margin-b-5"><strong>Time :</strong> 2019/2020</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -296,20 +296,18 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">President</h3>
-                                                <span>Gavel Club of Univeristy of Sri Jayewardenepura</span>
+                                                <h3 class="margin-b-5">Committee Member</h3>
+                                                <span>Aurora Conference on Computer Science</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony.</p>
-                                                        <p>Organized Speech Master 2019 – the biggest university level best speaker contest.</p>
+                                                        <p>A committe member in the marketing committee in Aurora - conference on computer science which was organised by the Society of Computer Science.</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Tenure :</strong> 2019/2020</p>
-                                                        <p class="margin-b-5"><strong>Other Events :</strong> Eleganza <br> Tharanaya</p>
+                                                        <p class="margin-b-5"><strong>Time :</strong> 2018</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -334,14 +332,14 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony.</p>
+                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony of the incoming board of officials.</p>
                                                         <p>Organized Speech Master 2019 – the biggest university level best speaker contest.</p>
+                                                        <p>Organized Tharanaya CSR program to distibute school books to a rural school.</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Tenure :</strong> 2019/2020</p>
-                                                        <p class="margin-b-5"><strong>Other Events :</strong> Eleganza <br> Tharanaya</p>
+                                                        <p class="margin-b-5"><strong>Time :</strong> 2019/2020</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -360,20 +358,20 @@
                                         <div class="work-popup-content">
                                             <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                             <div class="margin-b-30">
-                                                <h3 class="margin-b-5">President</h3>
+                                                <h3 class="margin-b-5">Member</h3>
                                                 <span>Gavel Club of Univeristy of Sri Jayewardenepura</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Organized Vorbitor 2019 – intra university public speaking contest and “Eminentium 2019” – installation ceremony.</p>
-                                                        <p>Organized Speech Master 2019 – the biggest university level best speaker contest.</p>
+                                                        <p>Member of the organizing committee of Speech Master 2018 – the biggest university level best speaker contest. Co-Compere of the grand finale held at Hilton, Colombo. </p>
+                                                        <p>Member of the organizing committee of Eleganza 2018 annual get together of the club.</p>
+                                                        <p>Activley took part in different public speaking competitions to further develop my public speaking skillls.</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p class="margin-b-5"><strong>Tenure :</strong> 2019/2020</p>
-                                                        <p class="margin-b-5"><strong>Other Events :</strong> Eleganza <br> Tharanaya</p>
+                                                        <p class="margin-b-5"><strong>Time :</strong> 2018/2019</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -406,15 +404,15 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Location</h5>
-                                    <a href="#about">101 Horton Place, Colombo 7</a>
+                                    <a href="#about">101 Wattegedara, Colombo</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Phone</h5>
-                                    <a href="+94777227992">+91 777 44 7882</a>
+                                    <a href="+94777447882">+91 777 44 7882</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:minuradaksith@gmail.com" target=_blank>minuradnsjkfdn@gmail.com</a>
+                                    <a href="mailto:minuradaksith@gmail.com" target=_blank>minuradaksith@gmail.com</a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
@@ -435,10 +433,9 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo-dark.png" alt="Aircv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" ></a> Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"> </a> Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
